# A_stocks_reports_agents

./: .env.example  .gitignore  AGENTS.md  D:\TushareData\fina_indicator_complete_data.db  ProjectPlan.md  Projects.md  README.md  TODO.md  config.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  workflow_overview.html
.github/workflows/: ci.yml
TushareAPI/: README.md  TUSHARE_CONFIG.md
TushareAPI/tushare_api_docs/债券专题/: 债券回购日行情_docid256.txt  全球财经事件_docid233.txt  可转债发行_docid186.txt  可转债基础信息_docid185.txt  可转债技术面因子(专业版）_docid392.txt  可转债票面利率_docid305.txt  可转债行情_docid187.txt  可转债赎回信息_docid269.txt  可转债转股价变动_docid246.txt  可转债转股结果_docid247.txt  国债收益率曲线_docid201.txt  大宗交易_docid271.txt  大宗交易明细_docid272.txt  柜台流通式债券报价_docid322.txt  柜台流通式债券最优报价_docid323.txt
TushareAPI/tushare_api_docs/公募基金/: 基金净值_docid119.txt  基金分红_docid120.txt  基金列表_docid19.txt  基金技术面因子(专业版)_docid359.txt  基金持仓_docid121.txt  基金管理人_docid118.txt  基金经理_docid208.txt  基金规模_docid207.txt
TushareAPI/tushare_api_docs/外汇数据/: 外汇基础信息（海外）_docid178.txt  外汇日线行情_docid179.txt
archive/notebooks/: PoeAPITrail.ipynb
archive/prompts/: Prompt.ini
archive/prototypes/: ProjectMainMiniTrail.py
docs/: architecture.md
reports/: 000002.SZ.html  000002.SZ.md  000002.SZ_state.json  002803.SZ.html  002803.SZ.md  002803.SZ_state.json  600000.SH_2025-09-13.md  601919.SH.html  601919.SH.md  601919.SH_state.json
tests/: __init__.py  test_anomalies.py  test_data_normalization.py  test_growth.py  test_llm_clean.py  test_news_node.py  test_ratios.py  test_smoke.py  test_valuation.py
tools/: api_smoke_test.py
(+88 files in other folders)
